syntax = "proto3";

package go.micro.service.leads;

option go_package = "proto/leads;leads";

service Leads {
	rpc NewLead(NewLeadRequest) returns (NewLeadResponse) {}
	rpc NewLeadQueued(NewLeadRequest) returns (NewLeadResponse) {}
	rpc NewLeadByLeadStatusID(NewLeadEvent) returns (NewLeadResponse) {}
}

message NewLeadRequest {
	string firstName = 1;
	string lastName = 2;
	string email = 3;
	string contact = 4;
	string source = 5;
	message KeyValue {
		string key = 1;
		string value = 2;
	}
	repeated KeyValue meta = 6;
	repeated KeyValue templateValues = 7;
	string campaignTag = 8;
}

message NewLeadResponse {
	string message = 1;
	bool status = 2;
}

message NewLeadEvent {
	string leadStatusId = 1;
}